[gd_scene load_steps=40 format=2]

[ext_resource path="res://5.1 sprites/sprites/smokeWhite1.png" type="Texture" id=1]
[ext_resource path="res://scripts/torreta01.gd" type="Script" id=2]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile228.png" type="Texture" id=3]
[ext_resource path="res://sons/projectil_hit.wav" type="AudioStream" id=4]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile298.png" type="Texture" id=5]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile250.png" type="Texture" id=6]
[ext_resource path="res://scripts/spot.gd" type="Script" id=7]
[ext_resource path="res://5.1 sprites/sprites/explosion5.png" type="Texture" id=8]
[ext_resource path="res://5.1 sprites/sprites/explosion3.png" type="Texture" id=9]
[ext_resource path="res://5.1 sprites/sprites/explosion2.png" type="Texture" id=10]
[ext_resource path="res://5.1 sprites/sprites/explosion4.png" type="Texture" id=11]
[ext_resource path="res://5.1 sprites/sprites/explosionSmoke1.png" type="Texture" id=12]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile021.png" type="Texture" id=13]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile020.png" type="Texture" id=14]
[ext_resource path="res://sons/tank_explosion.wav" type="AudioStream" id=15]
[ext_resource path="res://scenes/hp_barra.tscn" type="PackedScene" id=16]
[ext_resource path="res://scripts/cannon.gd" type="Script" id=17]
[ext_resource path="res://scripts/HOME.gd" type="Script" id=18]
[ext_resource path="res://5.1 sprites/inimigos/towerDefense_tile249.png" type="Texture" id=19]
[ext_resource path="res://sons/barrel_explosion.wav" type="AudioStream" id=20]

[sub_resource type="CircleShape2D" id=5]
radius = 25.0

[sub_resource type="Gradient" id=9]
offsets = PoolRealArray( 0.00877193, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.180392 )

[sub_resource type="GradientTexture" id=10]
gradient = SubResource( 9 )

[sub_resource type="Curve" id=11]
_data = [ Vector2( 0.0133588, 0.236196 ), 0.0, 0.0172834, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=12]
curve = SubResource( 11 )

[sub_resource type="ParticlesMaterial" id=13]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 12 )
color_ramp = SubResource( 10 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -2.5, -1.25012 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/fire:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -13.501, -0.750985 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HMG/fire:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "shoot"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("HMG/sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 2.07054, 1 ),
"update": 0,
"values": [ Vector2( -16.25, -1.25024 ), Vector2( -2.5, -1.25012 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("HMG/fire:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0.521569 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("HMG/fire:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -12.251, -0.750954 ), Vector2( -36.001, -0.752022 ), Vector2( -1.00101, -0.750756 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("HMG/fire:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 1 ), Vector2( 2, 1 ) ]
}

[sub_resource type="Animation" id=22]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=23]
resource_name = "fire"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 0.25 ),
"update": 0,
"values": [ Vector2( -40, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Gradient" id=24]
offsets = PoolRealArray( 0, 0.245614, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 0.235294 )

[sub_resource type="GradientTexture" id=25]
gradient = SubResource( 24 )

[sub_resource type="Curve" id=26]
_data = [ Vector2( 0, 0 ), 0.0, 3.17351, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=27]
curve = SubResource( 26 )

[sub_resource type="ParticlesMaterial" id=28]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 50.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 0.5
scale_curve = SubResource( 27 )
color_ramp = SubResource( 25 )

[sub_resource type="CircleShape2D" id=21]
radius = 100.0

[sub_resource type="CircleShape2D" id=15]
radius = 24.5586

[sub_resource type="Animation" id=20]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("../foligem:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
resource_name = "explode"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("sprite:texture")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 10 ), ExtResource( 9 ), ExtResource( 11 ), ExtResource( 8 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 2, 2 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../foligem:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[node name="torreta01" type="StaticBody2D" groups=["radar_entity"]]
rotation = -1.77701e-05
scale = Vector2( 0.8, 0.8 )
collision_layer = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
type = 1

[node name="sprite" type="Sprite" parent="."]
position = Vector2( -0.249084, -0.499405 )
texture = ExtResource( 3 )

[node name="shape" type="CollisionPolygon2D" parent="."]
position = Vector2( 64.7496, 80.7519 )
polygon = PoolVector2Array( -86.2484, -97.5017, -86.2489, -70.0017, -77.4991, -60.0015, -49.9991, -60.001, -41.2489, -68.7509, -41.2484, -97.5009 )

[node name="HMG" type="Area2D" parent="."]
visible = false
position = Vector2( 1.00101, 0.750732 )
collision_layer = 2
collision_mask = 0
script = ExtResource( 17 )

[node name="sprite" type="Sprite" parent="HMG"]
position = Vector2( -2.5, -1.25012 )
rotation = 1.5708
texture = ExtResource( 6 )
offset = Vector2( 0.845306, -12.8375 )

[node name="shape" type="CollisionShape2D" parent="HMG"]
position = Vector2( -1.25003, -1.25006 )
shape = SubResource( 5 )

[node name="sight" type="RayCast2D" parent="HMG"]
cast_to = Vector2( 100, 0 )

[node name="fire" type="Node2D" parent="HMG"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( -13.501, -0.750985 )

[node name="fire1" type="Sprite" parent="HMG/fire"]
position = Vector2( 53.9991, -6.99976 )
rotation = 1.57079
texture = ExtResource( 5 )

[node name="fire2" type="Sprite" parent="HMG/fire"]
position = Vector2( 53.9989, 5.50021 )
rotation = 1.57079
texture = ExtResource( 5 )

[node name="smoke" type="Particles2D" parent="HMG"]
position = Vector2( 41.499, -0.75 )
rotation = 3.63798e-12
emitting = false
amount = 4
local_coords = false
process_material = SubResource( 13 )
texture = ExtResource( 1 )

[node name="shoot_time" type="Timer" parent="HMG"]
wait_time = 0.3
autostart = true

[node name="cannon_anim" type="AnimationPlayer" parent="HMG"]
root_node = NodePath("../..")
anims/RESET = SubResource( 7 )
anims/shoot = SubResource( 8 )

[node name="stream_shoot" type="AudioStreamPlayer" parent="HMG"]
stream = ExtResource( 4 )
bus = "fx"

[node name="HOME" type="Area2D" parent="."]
scale = Vector2( 1, 1 )
script = ExtResource( 18 )

[node name="sprite" type="Sprite" parent="HOME"]
rotation = 1.5708
texture = ExtResource( 19 )
offset = Vector2( 1.29726, -13.3823 )

[node name="fire_timer" type="Timer" parent="HOME"]
wait_time = 2.0

[node name="barrel" type="Position2D" parent="HOME"]
position = Vector2( 53.75, 0.000955143 )

[node name="fire" type="AudioStreamPlayer" parent="HOME"]
stream = ExtResource( 20 )
bus = "fx"

[node name="anim" type="AnimationPlayer" parent="HOME"]
anims/RESET = SubResource( 22 )
anims/fire = SubResource( 23 )

[node name="smoke" type="Particles2D" parent="HOME"]
position = Vector2( 42.5, 0.000755229 )
emitting = false
lifetime = 0.5
one_shot = true
explosiveness = 0.8
randomness = 0.3
process_material = SubResource( 28 )
texture = ExtResource( 1 )

[node name="sensor" type="Area2D" parent="."]
position = Vector2( 2.2511, 0.750702 )
rotation = -3.63798e-12
collision_layer = 0

[node name="shape" type="CollisionShape2D" parent="sensor"]
position = Vector2( -2.25085, -0.750732 )
shape = SubResource( 21 )

[node name="spot" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource( 7 )

[node name="shape" type="CollisionShape2D" parent="spot"]
shape = SubResource( 15 )

[node name="explosion" type="Node2D" parent="."]
visible = false
scale = Vector2( 2, 2 )

[node name="sprite" type="Sprite" parent="explosion"]
position = Vector2( 2.22126e-05, -1.25 )
texture = ExtResource( 8 )

[node name="anim" type="AnimationPlayer" parent="explosion"]
anims/RESET = SubResource( 20 )
anims/explode = SubResource( 18 )

[node name="foligem" type="Sprite" parent="."]
visible = false
position = Vector2( 3.75004, -2.49993 )
scale = Vector2( 1.70052, 1.55306 )
texture = ExtResource( 13 )

[node name="foligem" type="Sprite" parent="foligem"]
position = Vector2( -0.735108, 2.41457 )
texture = ExtResource( 14 )

[node name="stream" type="Node2D" parent="."]

[node name="stream_hit" type="AudioStreamPlayer" parent="stream"]
stream = ExtResource( 4 )
bus = "fx"

[node name="stream_explode" type="AudioStreamPlayer" parent="stream"]
stream = ExtResource( 15 )
bus = "fx"

[node name="hp" type="Node2D" parent="."]
z_index = 100

[node name="hp_barra" parent="hp" instance=ExtResource( 16 )]
margin_left = -56.0
margin_top = -43.0
margin_right = 57.0
margin_bottom = -35.0

[connection signal="timeout" from="HMG/shoot_time" to="HMG" method="_on_shoot_time_timeout"]
[connection signal="timeout" from="HOME/fire_timer" to="HOME" method="_on_fire_timer_timeout"]
[connection signal="body_entered" from="sensor" to="." method="_on_sensor_body_entered"]
[connection signal="body_exited" from="sensor" to="." method="_on_sensor_body_exited"]
[connection signal="damage" from="spot" to="." method="_on_spot_damage"]
